dtor/tests/errors/dtor-unknown.stderr
error: Unexpected meta attribute: 'unknown'
       ...expected one of:
       anonymous; crate_path = $path : pat;
       ctor(link_section = $ctor_link_section_name : literal); link_section =
       $section : literal; method = $method_id : ident; unsafe; used(linker);
 --> tests/errors/dtor-unknown.rs:3:1
  |
3 | #[dtor(unknown)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__extract_meta` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unexpected meta attribute: 'unknown'
       ...expected one of:
       anonymous; crate_path = $path : pat;
       ctor(link_section = $ctor_link_section_name : literal); link_section =
       $section : literal; method = $method_id : ident; unsafe; used(linker);
 --> tests/errors/dtor-unknown.rs:7:1
  |
7 | #[dtor(unsafe, unknown, unknown2)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__extract_meta` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)
